# sigma-prework

./: .gitignore  README.md  age.py  maxmin.py  pyproject.toml
.github/workflows/: tests.yml
python/: age.py
rust/: Cargo.toml
rust/src/: main.rs  maxmin.rs
src/sigma_pre_work/: __init__.py  age.py  maxmin.py
tests/: test_age.py  test_maxmin.py
