[project]
name = "sigma-pre-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danny Bozbay", email = "107803920+dbozbay@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
age = "sigma_pre_work.age:main"
maxmin = "sigma_pre_work.maxmin:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
